# parallel-homework-2

./: CMakeLists.txt  README.md  main.cpp
